# HuboCan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.sh
HuboAgg/: CMakeLists.txt  HuboAgg.hpp
HuboAgg/src/: HuboAgg.cpp
HuboCan/: AchIncludes.h  AchIncludes.hpp  Aggregator.hpp  CMakeLists.txt  CanDevice.hpp  CanPump.hpp  DdParser.hpp  DeviceStrings.hpp  HuboCan.hpp  HuboCanId.hpp  HuboDescription.hpp  HuboJmc.hpp  HuboJoint.hpp  HuboSensor.hpp  InfoTypes.hpp  SocketCanPump.hpp  VirtualPump.hpp  hubo_info_c.h
HuboCan/devices/: AnotherDevice.dd  Hubo2Plus.dd  TestDevice.dd
HuboCan/devices/DrcHubo/: DRC_Body.dd  DRC_LeftArm.dd  DRC_LeftHand.dd  DRC_LeftLeg.dd  DRC_RightArm.dd  DRC_RightHand.dd  DRC_RightLeg.dd  DRC_Sensors.dd  meta.dd
HuboCan/devices/Hubo2Plus/: H2P_Body.dd  H2P_JMCs.dd  H2P_LeftArm.dd  H2P_LeftHand.dd  H2P_Neck.dd  H2P_RightArm.dd  H2P_RightLeg.dd  meta.dd
HuboCan/include/: CanDevice.hpp  CanPump.hpp  DdParser.hpp  DescParser.hpp  DrcHuboJoint.hpp  Hubo2PlusJoint.hpp  HuboDescription.hpp  HuboJmc.hpp  HuboJoint.hpp  InfoGenerator.hpp  InfoReceiver.hpp  InfoTypes.hpp  hubo_info_c.h
HuboCan/misc/: AnotherDevice.dd  DrcHubo.dd  H2P_JMCs.dd  H2P_LeftLeg.dd  H2P_RightArm.dd  H2P_RightLeg.dd  H2P_Sensors.dd  Hubo2Plus.dd
HuboCan/misc/DrcHubo/: DRC_JMCs.dd  DRC_LeftArm.dd  DRC_LeftHand.dd  DRC_LeftLeg.dd  DRC_RightArm.dd
HuboCan/misc/Hubo2Plus/: H2P_LeftArm.dd  H2P_RightHand.dd
HuboCan/src/: Aggregator.cpp  CanDevice.cpp  CanPump.cpp  DdParser.cpp  DescParser.cpp  DrcHubo2chJmc.cpp  DrcHubo3chJmc.cpp  Hubo2Plus5chJmc.cpp  Hubo2PlusBasicJmc.cpp  Hubo2PlusNckJmc.cpp  HuboCan.cpp  HuboDescription.cpp  HuboJmc.cpp  HuboJoint.cpp  HuboSensor.cpp  InfoReceiver.cpp  InfoTypes.cpp  SocketCanPump.cpp  VirtualPump.cpp  hubo_info_c.c  report_ach_errors_c.c  utils.hpp
HuboCan/test/: InfoTypes_test.cpp  config_setup_test.cpp  dd_parse_test.cpp  description_tester.cpp  home_test.cpp  info_receiver_test.cpp  socketcan_test.cpp  space_splitter_test.cpp  vcan_startup_test.cpp
HuboCmd/: Aggregator.hpp  AuxReceiver.hpp  AuxSender.hpp  CMakeLists.txt  Commander.hpp  HuboCmd.hpp  Initializer.hpp  hubo_aux_cmd_c.h  hubo_cmd_c.h  hubo_cmd_stream.hpp
HuboCmd/include/: Commander.hpp  HuboCmd.hpp  hubo_cmd_c.h
HuboCmd/src/: Aggregator.cpp  AuxReceiver.cpp  AuxSender.cpp  Commander.cpp  HuboCmd.cpp  Initializer.cpp  hubo_aux_cmd_c.c  hubo_cmd_c.c  hubo_cmd_stream.cpp
HuboCmd/test/: aggregator_test.cpp  commander_test.cpp  compression_test.cpp  simple_cmd.cpp  stream_commander_test.cpp
HuboPath/: CMakeLists.txt  Operator.hpp  Player.hpp  Trajectory.hpp  hubo_path.hpp  hubo_path_c.h
HuboPath/interpolation/: CMakeLists.txt  Path.cpp  Path.h  Spline.cpp  Spline.hpp  Trajectory.cpp  Trajectory.h
HuboPath/src/: Operator.cpp  Player.cpp  Trajectory.cpp  hubo_path.cpp  hubo_path_c.c
HuboPath/test/: operator_test.cpp  optimal_interpolation_test.cpp  player_test.cpp  receive_test.cpp  send_test.cpp
HuboQt/: AchNetworkWidget.h  AchdHandle.h  CMakeLists.txt  ConfigWidget.h  HuboQtMainWindow.h  HuboQtWidget.h  JointWidget.h  LogRelayWidget.h  ManagerWidget.h
HuboQt/src/: AchNetworkWidget.cpp  AchdHandle.cpp  ConfigWidget.cpp  FlowLayout.cpp  FlowLayout.h  HuboQtWidget.cpp  JointWidget.cpp  LogRelayWidget.cpp  ManagerWidget.cpp
HuboQt/ui/: AchNetworkWidget.ui  ConfigWidget.ui  ManagerWidget.ui
HuboQt/window/: HuboQtMainWindow.cpp  window.cpp
HuboRT/: CMakeLists.txt  Daemonizer.hpp  Daemonizer_C.h  Daemonizer_C.hpp  HuboRtParams.h  LogRelay.hpp  Manager.hpp  ManagerReq.hpp  manager_msg.h  manager_msg.hpp  utils.hpp
HuboRT/include/: Daemonizer.hpp  Daemonizer_C.h  HuboRT.hpp  HuboRT_C.h  HuboRtParams.h  Manager.hpp  ManagerReq.hpp  manager_msg.h
HuboRT/src/: Daemonizer.cpp  Daemonizer_C.c  HuboRT.cpp  HuboRT_C.c  LogRelay.cpp  Manager.cpp  ManagerReq.cpp  manager_msg.cpp  utils.cpp
HuboRT/test/: daemon_test.cpp  default_config_test.cpp  dirent_test.cpp  log_receiver_test.cpp  log_sender_test.cpp  logger_stream_test.cpp  logger_test.cpp  manager_test.cpp  split_test.cpp  stop_test.cpp
HuboState/: CMakeLists.txt  HuboData.hpp  HuboDataParsers.hpp  HuboState.hpp  Publisher.hpp  Receiver.hpp  State.hpp  hubo_sensor_c.h  hubo_sensor_stream.hpp
HuboState/include/: HuboState.hpp  InfoGenerator.hpp  InfoReceiver.hpp  InfoTypes.hpp  hubo_info_c.h
HuboState/src/: HuboState.cpp  InfoReceiver.cpp  Receiver.cpp  State.cpp  hubo_info_c.c  hubo_sensor_c.c  hubo_sensor_stream.cpp
HuboState/test/: hubodata_receive_test.cpp  hubodata_test.cpp  publish_sensor_test.cpp  read_sensor_test.cpp  state_test.cpp
cmd/: HuboCmd.cpp
devices/: DrcHubo.dd  Hubo2Plus.dd
devices/DrcHubo/: DRC_Body.dd  DRC_LeftArm.dd  DRC_LeftHand.dd  DRC_LeftLeg.dd  DRC_RightArm.dd  DRC_RightHand.dd  DRC_RightLeg.dd  DRC_Sensors.dd
devices/Hubo2Plus/: H2P_LeftHand.dd  H2P_LeftLeg.dd  H2P_RightHand.dd  H2P_Sensors.dd
include/: AchIncludes.h
instructions/: implement_device.txt  installation.txt  todo_list.txt
misc/: golems.list  hubo-manager  hubomgr.conf
misc/configs/: DrcHubo  Hubo2Plus  virtual_DrcHubo  virtual_Hubo2Plus
src/: hubo_interface.cpp  hubo_log_publisher.cpp  hubo_socketcan_interface.cpp  hubo_virtual_interface.cpp  hubocan_set_default_config.cpp  hubocan_setup_default_config.cpp  hubomgr.cpp  huboplayer.cpp
state/: HuboState.cpp
